--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.2.0'
+    id 'org.springframework.boot' version '2.7.18'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'java'
     id 'groovy'
@@ -34,8 +34,24 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+    implementation 'org.projectlombok:lombok:1.18.6'
+    //implementation 'org.glassfish.jersey.core:jersey-common:2.28'
+    //implementation 'org.glassfish.jersey.core:jersey-client:2.28'
+    implementation 'com.google.guava:guava:28.2-jre'
+
+    implementation 'no.fint:fint-sse:1.4.1'
+    implementation 'no.fint:fint-event-model:3.0.2'
+    implementation 'no.fint:fint-relation-model:1.1.6'
+    implementation 'no.fint:fint-okonomi-model-java:3.16.0'
+    implementation 'no.fint:fint-okonomi-resource-model-java:3.16.0'
+
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'io.netty:netty-resolver-dns-native-macos:4.1.101.Final:osx-aarch_64'
+
+    implementation('no.fint:fint-relations:2.2.1') {
+        exclude group: 'com.github.springfox.loader'
+        exclude group: 'org.springframework.boot'
+    }
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
