--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -23,5 +23,5 @@ spec:
             - containerPort: 8080
           envFrom:
             - secretRef:
-                name: fint-okonomi-dummy-adapter
+                name: okonomi-dummy-adapter
 
