--- a/kustomize/overlays/pwf/fintlabs-no/onepassword.yaml
+++ b/kustomize/overlays/pwf/fintlabs-no/onepassword.yaml
@@ -1,6 +1,6 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-  name: okonomi-dummy-adapter
+  name: fint-okonomi-dummy-adapter
 spec:
   itemPath: "vaults/aks-pwf-vault/items/okonomi-dummy-adapter"
