--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -21,5 +21,7 @@ spec:
               cpu: "100m"
           ports:
             - containerPort: 8080
-
+          envFrom:
+            - secretRef:
+                name: fint-okonomi-dummy-adapter
 
