--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -30,6 +30,8 @@ jobs:
       - name: Gradle build
         run: |
           ./gradlew build
+          mkdir data
+          cp ./build/libs/${GITHUB_REPOSITORY#*/}-*.jar ./data/app.jar
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3.1.2
