--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,7 +1,11 @@
 name: CI
+
 on:
   pull_request:
   push:
+    branches: [main]
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,10 +24,10 @@ jobs:
           java-version: '17'
 
       - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.6
+        uses: gradle/wrapper-validation-action@v1.1.0
 
       - name: Gradle Setup
-        uses: gradle/gradle-build-action@v2.4.2
+        uses: gradle/gradle-build-action@v2.4.0
         with:
           gradle-version: wrapper
 
@@ -34,7 +38,7 @@ jobs:
           cp ./build/libs/${GITHUB_REPOSITORY#*/}-*.jar ./data/app.jar
 
       - name: Upload Build Artifact
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: ${{steps.get_repo.outputs.REPO}}
           path: ./data/app.jar
